<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addShow">


    <Button
        android:id="@+id/btn_showImg"
        android:layout_width="43dp"
        android:layout_height="37dp"
        android:layout_marginStart="217dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="182dp"
        android:background="@drawable/showimage"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_location"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="157dp"
        android:layout_height="38dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="181dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/imageupload"
        android:textColor="#1D1D1D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/remove"
        android:layout_width="128dp"
        android:layout_height="55dp"
        android:layout_gravity="start"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/roundedbtn"
        android:enabled="true"
        android:fontFamily="@font/poppins_light"
        android:onClick="home"
        android:text="@string/back"
        android:textColor="#F8F5F5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update"
        app:layout_constraintVertical_bias="0.194" />

    <EditText
        android:id="@+id/up_location"
        android:layout_width="236dp"
        android:layout_height="56dp"

        android:layout_marginStart="153dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="502dp"
        android:autofillHints=""
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="#222121"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="258dp"
        android:layout_marginBottom="502dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/location"
        android:textColor="#1D1D1D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="337dp"
        android:layout_height="108dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="573dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/showsadd"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/update"
        android:layout_width="288dp"
        android:layout_height="57dp"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="103dp"
        android:background="@drawable/rounded_button"
        android:text="@string/addshow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_showImg"
        app:layout_constraintVertical_bias="0.29" />

</androidx.constraintlayout.widget.ConstraintLayout>